Phase 6/7: AUTO model selection, TDB dispatch, and generic constraint bookkeeping
- PhaseModelKind.AUTO now uses availability-aware CEF/CVM selection
  instead of always defaulting to CEF.
- TdbParser/ThermodynamicSystem/ApplicationLayer: explicit CEF/CVM model
  dispatch and single-parsed-database flow.
- CvmPhaseData/TdbCvmModelBuilder/CvCfBasis/CvCfBasisGenerator: CVM model
  construction updates supporting the above.
- EquilibriumSolverV2: migrate common constraint bookkeeping
  (calculateChemicalPotentials, recomputeSublatticeMultipliers,
  boundedSiteFractionIndices, phaseStationarityNorm, and both
  normalization-residual blocks) from hand-reconstructed sublattice
  offsets/constituent counts to the generic
  GibbsEnergyModel.getConstraintSet() contract (C*y=b). CEF-specific
  sampling (CefInternalStateSampler, GridMinimizer.sampleSiteFractions)
  is untouched and still uses real sublattice metadata.
- Add NbTiVZr and NbV CVM TDB fixtures and associated model-dispatch/
  parser tests.

Normal fast suite: 138 tests, 0 failures, 13 ignored (baseline match).